# radical

./: .gitignore  LICENSE  Makefile  pyproject.toml  test.sh
examples/: annotations.rd  builtin_types.rd  comments.rad  comments.rd  data_types.rd  enum_types.rad  enum_types.rd  functions.rd  record_types.rad  record_types.rd  strings.rad  strings.rd  struct_types.rd  union_types.rd
scripts/: fix_parser_tests.py  fix_tests.py  fix_tokenizer_tests.py
test_cases/lexer/: dot_not_after_expression.rad  empty.rad  fail_dot_not_after_expression.rad  fail_type_application_not_after_expression.rad  function_call.rad  keywords.rad  let_in_expression.rad  literals.rad  operators.rad  parentheses.rad  symbol_assignment.rad  tree_literals.rad  tuples.rad  type_application.rad  type_application_not_after_expression.rad
test_cases/parser/: attribute_access.rd  binary_operators.rad  binary_operators.rd  binaryop_add_mult.rad  empty.rad  function_call.rd  generic_type_expressions.rad  generic_type_expressions.rd  if_then_else.rad  if_then_else.rd  index_access.rad  index_access.rd  let_in_expression.rd  list_literals.rd  local_assignment.rad  map_literals.rd  number_and_string_types.rad  number_and_string_types.rd  number_literals.rad  number_literals.rd  operators.rad  parentheses.rd  parenthesized_expressions.rad  parenthesized_types.rad  parenthesized_types.rd  quoted_symbols.rad  set_literals.rd  simple_typed_assignment.rd  spread_operator.rad  spread_operator.rd  string_literals.rad  string_literals.rd  symbol_assignment.rad  symbol_assignment.rd  tree_literals.rd  tuples.rd  (+7 more)
(+770 files in other folders)
