[project]
name = "radical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autokey>=0.96.0",
    "dbus-python>=1.4.0",
    "pyasyncore>=1.0.5",
    "pycairo>=1.29.0",
    "pygobject>=3.54.5",
    "standard-imghdr>=3.13.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "ruff>=0.14.10",
    "ty>=0.0.9",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
